[metadata]
name = step-scan
description = Simple step scan module
author = Luis Fernando Segalla
author_email = luisfsegalla@gmail.com
long_description = file: README.md

[options]
python_requires = >=3.11
packages=find:
package_dir=
    =src


install_requires =
    cothread
    p4p
    
[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    step_scan = main:main